--- a/styles.css
+++ b/styles.css
@@ -337,7 +337,6 @@ h2 {
     }
   }
    */
-
 .navbar {
 	position: fixed;
 	bottom: 3%;
@@ -349,7 +348,28 @@ h2 {
 	z-index: 10;
 	opacity: 1;
 	cursor: none;
-	/* transition: opacity 1s ease, transform 1s ease; */
+	transition: background-color 0.5s ease-in-out;
+}
+
+.navbar:hover {
+	animation: changeColor 0.5s forwards;
+	background-color: orange;
+	color: white;
+}
+
+@keyframes changeColor {
+	0% {
+		background-color: #fff;
+		color: white;
+	}
+
+	99.9% {
+		background-color: orange;
+		color: white;
+	}
+}
+.navbar:hover a {
+    color: white; 
 }
 
 .navbar ul {
@@ -363,6 +383,7 @@ h2 {
 	font-family: "MuseoModerno", sans-serif;
 	cursor: none;
 }
+
 
 .arrow {
 	background-color: #2c2c2c;
@@ -398,6 +419,7 @@ h2 {
 	border-radius: 50px;
 	cursor: none;
 }
+
 
 .logo-container {
 	display: flex;
@@ -1839,6 +1861,8 @@ input[type="checkbox"] {
 
 .footer__head {
 	max-width: 240px;
+	font-family: "Plusjakartasans", sans-serif;
+
 }
 
 .footer__right-col {
@@ -1851,7 +1875,8 @@ input[type="checkbox"] {
 	justify-content: space-between;
 	align-items: flex-start;
 	display: flex;
-	padding-left: 2rem;
+	/* padding-left: 12rem; */
+	/* width: 100%; */
 }
 
 .footer__link-col-left {
@@ -1868,7 +1893,7 @@ input[type="checkbox"] {
 	color: #fff;
 	margin-bottom: 16px;
 	font-size: 15px;
-	font-weight: 900;
+	/* font-weight: 900; */
 	text-decoration: none;
 	transition: all 0.2s;
 	display: block;
@@ -1885,12 +1910,11 @@ input[type="checkbox"] {
 	color: #fff;
 	margin-bottom: 16px;
 	font-size: 15px;
-	font-weight: 900;
+	/* font-weight: 900; */
 	text-decoration: none;
 	transition: all 0.2s;
 	display: block;
-	font-family: "arialg", sans-serif;
-	/* cursor: pointer; */
+	font-family: "Plusjakartasans", sans-serif;
 	cursor: none;
 }
 
@@ -2284,10 +2308,15 @@ input[type="checkbox"] {
 
 .gallery {
 	display: flex;
+	gap: 2rem;
+	padding-right: 4rem;
+	padding-bottom: 10rem;
+	/* border: 4px solid white; */
 }
 
 .left {
 	width: 55%;
+	padding-left: 6rem;
 }
 
 .right {
@@ -2315,6 +2344,7 @@ input[type="checkbox"] {
 .desktopContentSection h1 {
 	font-family: "Roboto", sans-serif;
 }
+
 .desktopContentSection h2 {
 	font-family: "Roboto", sans-serif;
 	font-weight: 100;
@@ -2327,28 +2357,27 @@ input[type="checkbox"] {
 .desktopPhotos {
 	background-image: url(https://assets.website-files.com/5837424ae11409586f837994/611b2d3c1a84f270060c9ec1_Texture.png);
 	background-color: #131313a2;
-	width: 40vw;
-	height: 30vw;
+	width: 34vw;
+	height: 34vw;
 	border-radius: 20px;
 	position: relative;
 	overflow: hidden;
 	box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.4);
-	margin-top: -100px;
+	margin: auto;
+	margin-top: 24px;
 }
 
 .desktopPhoto {
 	position: absolute;
-	top: 3rem;
-	left: 1.7rem;
-	width: 90%;
-	height: 90%;
+	padding: 35px;
+	width: 100%;
+	height: 100%;
 	border-radius: 20px;
-	box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.4);
 }
 
 .desktopPhoto img {
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: contain;
 	border-radius: 20px;
 }
